assets/css/style-yellow.css
/* ... */
.btn:hover,
.btn:focus {
  outline: none;
  top: 4px;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.btn:active,
.btn.active {
  outline: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.btn i.fa {
  padding-right: 10px;
}
.btn b {
  font-size: 26px;
  line-height: 48px;
  vertical-align: bottom;
  padding: 0 10px 0 0;
}
.btn span {
  font-weight: 700;
  font-size: 24px;
  margin: 0;
  vertical-align: middle;
  display: inline-block;
  padding: 0 0 5px 5px;
}
.btn.white {
  background: #FFF;
  box-shadow: none;
  color: #202020;
  text-decoration: none;
  -webkit-box-shadow: 0 4px 0 #e0e0e0;
  -moz-box-shadow: 0 4px 0 #e0e0e0;
  box-shadow: 0 4px 0 #e0e0e0;
}
.btn.white:hover,
.btn.white:focus {
  color: #202020;
  top: 4px;
  text-decoration: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.btn.dark {
  background: #202020;
  box-shadow: none;
  color: #fff;
  text-decoration: none;
  -webkit-box-shadow: 0 4px 0 #000000;
  -moz-box-shadow: 0 4px 0 #000000;
  box-shadow: 0 4px 0 #000000;
}
.btn.dark:hover,
.btn.dark:focus {
  color: #fff;
  top: 4px;
  text-decoration: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
/*-----  End of Buttons  ------*/
/*===============================
=            Socials            =
===============================*/
.social-links-2 {
  list-style: none;
  margin: 0;
  padding: 0;
}
.social-links-2 li {
  display: inline-block;
  margin: 0 3px;
  box-shadow: none;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}
.social-links-2 li a {
  background: transparent;
  display: block;
  color: #ccc;
  font-size: 16px;
  width: 40px;
  height: 40px;
  line-height: 40px;
  text-align: center;
  border-radius: 50%;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}
.social-links-2 li a:hover {
  color: #202020;
  background: #bdc3c7;
  text-decoration: none;
  border-color: #bdc3c7;
}
/*-----  End of Socials  ------*/
/*============================
=            Hero            =
============================*/
.hero {
  height: 550px;
}
.hero .hero-unit {
  text-align: center;
  padding: 0;
  margin: 0;
  background-color: transparent;
}
.hero .hero-unit h1 {
  font-size: 70px;
  font-weight: 200;
  margin-top: 70px;
}
.hero .hero-start-link,
.hero .hero-start-link:focus {
  position: absolute;
  left: 50%;
  bottom: 0;
  margin-left: -19px;
  margin-bottom: 15px !important;
  display: block;
  width: 40px;
  height: 40px;
  border: 2px solid #202020;
  border-radius: 50%;
  line-height: 36px;
  text-align: center;
  font-size: 28px;
  color: #ffffff;
  background-color: #202020;
}
.hero .hero-start-link:hover,
.hero .hero-start-link:focus:hover {
  color: #bdc3c7;
  text-decoration: none;
}
.hero .img-hero {
  background-image: url('../images/logo.png');
  background-repeat: no-repeat;
  background-position: center top !important;
  text-align: center;
  padding-top: 100px;
  height: 200px;
}
@media (max-width: 767px) {
  .hero .img-hero {
    margin-top: 30px;
  }
}
/*-----  End of Hero  ------*/
/*================================
=            Contents            =
================================*/
.content-1 .white-box {
  background-color: rgba(255, 255, 255, 0.85);
  padding: 50px;
}
.content-1 h2 {
  margin: 0 0 20px 0;
}
.content-1 .btn {
  margin-top: 20px;
  margin-bottom: 0;
}
.bg-image-2 {
  background: #bdc3c7 url(../images/mockup5.png) no-repeat center center;
  background-size: cover;
}
@media (max-width: 767px) {
  .bg-image-2 {
    background: #bdc3c7 url(../images/mockup5.png) no-repeat 20% center;
  }
}
blockquote,
.blockquote-reverse {
  padding-top: 0;
  padding-bottom: 0;
  border-color: #202020;
}
/*-----  End of Contents  ------*/
/*======================================
=            Call to action            =
======================================*/
.cta-1 span {
  margin: 0;
  font-size: 26px;
  vertical-align: middle;
  display: inline-block;
  padding: 0 0 5px 5px;
}
.cta-1 .btn {
  margin: 0 0 0 30px;
}
@media (max-width: 768px) {
  .cta-1 span {
    display: block;
  }
  .cta-1 .btn {
    margin: 30px 0 0;
  }
}
/*-----  End of Call to action  ------*/
/*================================
=            Features            =
================================*/
.features-1 article {
  margin: 0px 0px 60px 0px;
  padding: 0px 10px;
}
.features-1 article .fa {
  font-size: 32px;
  color: #bdc3c7;
}
.features-1 article h3 {
  font-size: 17px;
  font-weight: 700;
  display: block;
  margin: 12px 0px 13px 0px;
}
.features-1 article p {
  font-size: 15px;
  color: #b6b6b6;
}
.features-1 article .zoom-img {
  border-radius: 50%;
  width: 180px;
  z-index: 1;
  margin-bottom: 25px;
  border: 6px solid #bdc3c7;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  -o-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.15s ease-out 0s;
  -moz-transition: all 0.15s ease-out 0s;
  -o-transition: all 0.15s ease-out 0s;
  transition: all 0.15s ease-out 0s;
  -webkit-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.4);
  box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.4);
}
.features-1 article .zoom-img:hover {
  -webkit-transform: scale(1.5);
  -moz-transform: scale(1.5);
  -ms-transform: scale(1.5);
  -o-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transition: all 0.15s ease-out 0s;
  -moz-transition: all 0.15s ease-out 0s;
  -o-transition: all 0.15s ease-out 0s;
  transition: all 0.15s ease-out 0s;
}
/* ... */

